# build-your-x

./: .gitignore  .pre-commit-config.yaml  README.md  byox-sync.service  byox-sync.timer  install.sh  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  python-tests.yml
builds/tool-tutorial/testProject/: package-lock.json  package.json
builds/tool-tutorial/tool/: package-lock.json  package.json
builds/tool-tutorial/tool/src/: logger.js
builds/tool-tutorial/tool/src/commands/: start.js
builds/tool-tutorial/tool/src/config/: config-mgr.js
byox_ladder/: __main__.py  _cli.py  _progress.py  _resolve.py  _sync.py  build_pages.py  guide-ladder.html
byox_ladder/templates/: guide.template.html
byox_ladder/tests/: conftest.py  test_build_pages.py  test_cli.py  test_parse_guides.py  test_progress.py  test_resolve.py  test_sync.py
docs/explanations/: 2026-07-17-explanation-byox-progress-tracker.html  index.html
